phase-2 added profile page redirection and added profile page implementation  geting youtube videos using channelid

--- a/yt-lytics-syntax-squad/app/views/displayResults.scala.html
+++ b/yt-lytics-syntax-squad/app/views/displayResults.scala.html
@@ -6,7 +6,7 @@
         <strong>Search terms:</strong> @search.getSearchTerms() <br>
         @for((video, index) <- search.getYouTubeVideosList().zipWithIndex){
             @(index+1). <strong>Title: </strong> @video.getTitle(),
-            <strong>Channel: </strong> @video.getChannel(),
+            <strong>Channel: </strong> @video.getHtmlLinkforProfile(),
             <strong>Description: </strong> @video.getDescription() <br>
             <br>
         }
