--- a/yt-lytics-syntax-squad/app/views/search.scala.html
+++ b/yt-lytics-syntax-squad/app/views/search.scala.html
@@ -4,16 +4,14 @@
 @displayResults("YT Lytics")(searchResultsList){
     <h2>Welcome to YT Lytics</h2>
     <div class="search-container">
-        
-    @helper.form(action = routes.SearchController.search()){
-        @helper.inputText(
-            searchForm("key"),
-            '_label -> "",
-            'placeholder -> "Enter search terms",
-            'class -> "search-input"
-        )
-        
-        <input type="submit" value="Go!" class="search-button"/>
-    }
-</div>
+        @helper.form(action = routes.SearchController.search()){
+            @helper.inputText(
+                searchForm("key"),
+                '_label -> "",
+                'placeholder -> "Enter search terms",
+                'class -> "search-input"
+            )
+        <button type="submit" value="Go!" class="search-button">Go!</button>
+        }
+    </div>
 }
