--- a/yt-lytics-syntax-squad/app/views/main.scala.html
+++ b/yt-lytics-syntax-squad/app/views/main.scala.html
@@ -17,6 +17,6 @@
     <body>
         @content
 
-        <script src='@routes.Assets.versioned("javascripts/main.js")' type="text/javascript"></script>
+        <!-- <script src='@routes.Assets.versioned("javascripts/main.js")' type="text/javascript"></script> -->
     </body>
 </html>
