--- a/yt-lytics-syntax-squad/app/views/displayResults.scala.html
+++ b/yt-lytics-syntax-squad/app/views/displayResults.scala.html
@@ -5,8 +5,8 @@
     @for(search <- searchResultsList) {
         <br><br>
         <div class="search-terms"><span class="search-term-title">Search terms:  @search.getSearchTerms() </span>
-            Average Flesch-Kincaid Grade Level: @search.getAverageFleschKincaidGradeLevel(), 
-            Average Flesch Reading Ease Score: @search.getAverageFleschReadingEaseScore(). 
+            Average Flesch-Kincaid Grade Level = @search.getAverageFleschKincaidGradeLevel(),
+            Average Flesch Reading Ease Score = @search.getAverageFleschReadingEaseScore().
             <a href="@routes.SearchController.displayStats(search.getSearchTerms())" class="more-stats-link">More stats</a>
         </div>
         @for((video, index) <- search.getYouTubeVideosList().zipWithIndex){
@@ -15,8 +15,8 @@
                     @(index+1). <strong>Title: </strong> @video.getHtmlLinkforTitle(),
                     <strong>Channel: </strong> @video.getHtmlLinkforProfile(),
                     <strong>Description: </strong> "@video.getDescription()". 
-                    Flesch-Kincaid Grade Level: @video.getFleschKincaidGradeLevel(),
-                    Flesch Reading Ease Score: @video.getFleschReadingEaseScore(). 
+                    Flesch-Kincaid Grade Level = @video.getFleschKincaidGradeLevel(),
+                    Flesch Reading Ease Score = @video.getFleschReadingEaseScore().
                     @video.getHtmlLinkforVideoTags<br>
                 </div>
                 <div class="video-thumbnail">
