--- a/yt-lytics-syntax-squad/app/views/tagsearch.scala.html
+++ b/yt-lytics-syntax-squad/app/views/tagsearch.scala.html
@@ -5,8 +5,18 @@
     @for((video,index) <- searchResultsList.zipWithIndex) {
         <div class="video-item">
             <div class="video-details">
-                @(index+1). <strong>Title: </strong> @video.getHtmlLinkforTitle(),
-                <strong>Channel: </strong> @video.getHtmlLinkforProfile(),
+                @(index+1). <strong>Title: </strong>
+                @if(video.getHtmlLinkforTitle().isEmpty) {
+                    @video.getTitle(),
+                } else {
+                    <a href=@video.getHtmlLinkforTitle() target="_blank">@video.getTitle()</a>,
+                }
+                <strong>Channel: </strong>
+                @if(video.getHtmlLinkforProfile().isEmpty) {
+                    @video.getChannel(),
+                } else {
+                <a href=@video.getHtmlLinkforProfile() >@video.getChannel()</a>,
+                }
                 <strong>Description: </strong> @video.getDescription()
             </div>
             <div class="video-thumbnail">
