css changes for tags and video tags

--- a/yt-lytics-syntax-squad/app/views/main.scala.html
+++ b/yt-lytics-syntax-squad/app/views/main.scala.html
@@ -13,6 +13,9 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
         <link rel="shortcut icon" type="image/png" href='@routes.Assets.versioned("images/favicon.png")'>
+        <link rel="channel" type="chan" href="stylesheets/channel.css">
+        <link rel="videotags" type="videotag" href="stylesheets/videotags.css">
+        
     </head>
     <body>
         @content
