--- a/yt-lytics-syntax-squad/public/stylesheets/main.css
+++ b/yt-lytics-syntax-squad/public/stylesheets/main.css
@@ -117,9 +117,10 @@ h1 {
 }
 
 .video-thumbnail img {
-    max-width: 100%;
-    height: 60px;
-    border-radius: 4px;
+        max-width: 100%;
+        height: 100%;
+        width: 100%;
+        border-radius: 10px;   
 }
 
 table {
