added css files changes and author added

--- a/yt-lytics-syntax-squad/app/views/displayResults.scala.html
+++ b/yt-lytics-syntax-squad/app/views/displayResults.scala.html
@@ -34,7 +34,7 @@
                     @if(video.getHtmlLinkforVideoTags.isEmpty) {
                         Tags <br>
                     }else{
-                        <a href=@video.getHtmlLinkforVideoTags target="_blank">Tags</a>
+                        <a href=@video.getHtmlLinkforVideoTags>Tags</a>
                     }
 
                     <br>
