--- a/yt-lytics-syntax-squad/app/views/profile.scala.html
+++ b/yt-lytics-syntax-squad/app/views/profile.scala.html
@@ -1,35 +1,31 @@
 @(channelName : String)(searchResultsList: List[YouTubeVideo])
 
 @main("Profile") {
-<h1>Channel name is @channelName</h1>
+<h1>Channel name : @channelName</h1>
     @for((video,index) <- searchResultsList.zipWithIndex) {
+    <div class="search-results">
         <div class="video-item">
-            
             <div class="video-details">
-                <div class="title">
                     @(index+1). <strong>Title: </strong> @if(video.getHtmlLinkforTitle().isEmpty) {
                         @video.getTitle(),
                     } else {
                         <a href=@video.getHtmlLinkforTitle() target="_blank">@video.getTitle()</a>,
-                    }
-    
-                </div>,
-                <div class="description-box">
-                    <strong>Description: </strong>
-                    <span class="full-description">@video.getDescription()</span>
-                    <div class="tags">
+                    } ,
+                    <strong>Description: </strong>@video.getDescription(),
                         @if(video.getHtmlLinkforVideoTags.isEmpty) {
                             Tags <br>
                         }else{
-                            <a href=@video.getHtmlLinkforVideoTags target="_blank">Tags</a>
+                            <a href=@video.getHtmlLinkforVideoTags >Tags</a>
                         }
         
-                    </div>
             </div>
             <div class="video-thumbnail">
-                <img src="@video.getThumbnailUrl()" alt="Thumbnail" />
+                <a href=@video.getHtmlLinkforTitle() target="_blank">
+                    <img src="@video.getThumbnailUrl()" alt="Thumbnail" />
+                </a>
             </div>
         </div>
+    </div>
     }
         
 }
