--- a/yt-lytics-syntax-squad/public/stylesheets/main.css
+++ b/yt-lytics-syntax-squad/public/stylesheets/main.css
@@ -60,7 +60,7 @@ h1 {
     font-family: Arial, sans-serif;
     line-height: 1.5;
     color: #333;
-    padding: 20px;
+    padding: 20px 10px 20px 30px;
 }
 
 .search-results .search-terms {
@@ -68,10 +68,21 @@ h1 {
 }
 
 .video-item {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect */
+    transition: box-shadow 0.3s ease;
     display: flex;
     align-items: flex-start;
+    padding: 15px;
+    border-radius:5px;
+}
+
+.video-item-tagpage{
+    display: flex;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect */
+        transition: box-shadow 0.3s ease;
+    align-items: flex-start;
     margin-bottom: 0;
-    padding-bottom: 5px;
+    padding: 50px 50px;
 }
 
 .search-results .video-item + .video-item {
@@ -84,6 +95,13 @@ h1 {
     padding-right: 20px;
 }
 
+.video-details-tagpage{
+    flex: 2;
+    padding: 30px 20px;
+}
+.tag-list-tagpage{
+    margin:5px 50px;
+}
 .video-details strong {
     color: #333;
 }
@@ -108,6 +126,15 @@ h1 {
     margin-top: 5px;
 }
 
+.video-thumbnail-tagpage a img{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 500px;
+    border-radius: 10px;
+}
 .video-thumbnail {
     flex: 1;
     max-width: 200px;
@@ -140,3 +167,18 @@ background-color: #D6EEEE;
 tr {
 border-bottom: 1px solid #ddd;
 }
+
+.card {
+            width: 300px;              /* Card width */
+            padding: 20px;             /* Padding inside the card */
+            margin: 20px;              /* Margin around the card */
+            background-color: white;  /* Background color of the card */
+            border-radius: 10px;      /* Rounded corners */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect */
+            transition: box-shadow 0.3s ease; /* Smooth transition for shadow */
+        }
+
+        /* Hover effect for shadow */
+        .card:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Darker shadow on hover */
+        }
